<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Alarm UI</string>

	<string name="alarm_name">Name</string>
	<string name="repeat_weekly">Repeat Weekly</string>
	<string name="sunday">Sunday</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="alarm_sound">Alarm Sound</string>
	<string name="alarm_sound_default">Choose a sound</string>
	
</resources>
